Fix UI overflowing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html {
+  font-size: 16px;
+}
 .choiceBtn {
   padding: 0.5rem 1rem;
   font-size: 2.5rem;
